Fix Collapse and notes button style in WF  modules

--- a/assets/css/components/Modules.scss
+++ b/assets/css/components/Modules.scss
@@ -48,6 +48,7 @@
         color:$light-gray;
         border-radius: 5rem;
         margin-right:0rem;
+        opacity: 0.6;
 
         &.lesson-highlight {
           color: $brand-pink;
